# saida_ai

./: .gitignore  README.md  push.sh
image-batch-editor/: .gitignore  ARCHITECTURE.md  FILE_TREE.md  README.md  SETUP.md  SUMMARY.md  TEST_CHECKLIST.md  create_files.sh  generate-icon.html  index.html  package.json  vite.config.ts
image-batch-editor/scripts/: install.sh
image-batch-editor/src/: App.tsx  types.ts
image-batch-editor/src-tauri/: Cargo.toml  tauri.conf.json
image-batch-editor/src-tauri/capabilities/: default.json
image-batch-editor/src-tauri/icons/: .gitkeep  create_icon.py
image-batch-editor/src-tauri/src/: commands.rs  main.rs  processor.rs
image-batch-editor/src/components/: FileList.tsx  LogPanel.tsx  Preview.tsx  ProgressBar.tsx  SettingsPanel.tsx  TopBar.tsx
image-batch-editor/src/hooks/: useImageProcessor.ts
image-upscaler-pro/: ADSENSE_QUICK_SETUP.md  GIT_SETUP.md  GOOGLE_ADSENSE_SETUP.md  GOOGLE_LOGIN_SETUP.md  PUSH_GUIDE.md  USER_GUIDE.md  package-lock.json  package.json  pnpm-lock.yaml
image-upscaler-pro/app/: globals.css  layout.tsx  page.tsx
image-upscaler-pro/hooks/: useUpscale.ts
image-upscaler-pro/lib/: watermarkPresets.ts
image-upscaler-pro/types/: jsqr.d.ts
qr_barcode_scan/: .gitignore  README.md  analysis.txt  build_log.txt  pubspec.yaml
qr_barcode_scan/android/: upload_certificate.pem
qr_barcode_scan/lib/: main.dart
qr_barcode_scan/linux/: CMakeLists.txt
qr_barcode_scan/test/: widget_test.dart
qr_barcode_scan/web/: index.html  manifest.json
qr_barcode_scan/windows/: CMakeLists.txt
(+120 files in other folders)
