[package]
name = "image-batch-editor"
version = "1.0.0"
description = "A powerful image batch editor"
authors = ["you"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = ["protocol-asset"] }
tauri-plugin-dialog = "2.0"
tauri-plugin-fs = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
image = { version = "0.25", features = ["jpeg", "png", "webp"] }
webp = "0.3"
tokio = { version = "1.35", features = ["full"] }
anyhow = "1.0"
walkdir = "2.4"
once_cell = "1.19"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-shell = "2.0"
